--- a/Hiring.Cloud.CodeChallenge.MVC/Hiring.Cloud.CodeChallenge.MVC.csproj
+++ b/Hiring.Cloud.CodeChallenge.MVC/Hiring.Cloud.CodeChallenge.MVC.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup>
+    <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest> 
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
@@ -20,5 +23,10 @@
     <ProjectReference Include="..\Hiring.Cloud.CodeChallenge.Model\Hiring.Cloud.CodeChallenge.Model.csproj" />
     <ProjectReference Include="..\Hiring.Cloud.CodeChallenge.Service\Hiring.Cloud.CodeChallenge.Service.csproj" />
     <ProjectReference Include="..\Hiring.Cloud.CodeChallenge.Common\Hiring.Cloud.CodeChallenge.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Update="Configs\appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
