--- a/Hiring.Cloud.CodeChallenge.Service/Hiring.Cloud.CodeChallenge.Service.csproj
+++ b/Hiring.Cloud.CodeChallenge.Service/Hiring.Cloud.CodeChallenge.Service.csproj
@@ -13,6 +13,7 @@
     <ProjectReference Include="..\Hiring.Cloud.CodeChallenge.Common\Hiring.Cloud.CodeChallenge.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
   </ItemGroup>
