Add Async sample

--- a/Hiring.Cloud.CodeChallenge.Service/Hiring.Cloud.CodeChallenge.Service.csproj
+++ b/Hiring.Cloud.CodeChallenge.Service/Hiring.Cloud.CodeChallenge.Service.csproj
@@ -16,5 +16,6 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.0.0" />
+    <PackageReference Include="System.Threading.Tasks" Version="4.3.0" />
   </ItemGroup>
 </Project>
